--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,97 +1,56 @@
 ---
-title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+title: "Quickstart"
 ---
 
-## Setup your development
+**How to Install Decode (macOS only)**
 
-Learn how to update your docs locally and deploy them to the public.
+Thanks for trying **Decode** — a visual tool for turning your ideas into software.
 
-### Edit and preview
+Since this app is not yet notarized by Apple, you’ll need to follow a few quick steps to allow it to run on your Mac. This process is safe and takes less than a minute.
 
-<AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 
-    1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `docs.json` is): ``` mintlify dev ```
-    <Note>
-      If you’re currently using the legacy ```mint.json``` configuration file, please update the Mintlify CLI:
+## Step 1: Download and Open the `.dmg`
 
+1. Download the `Decode.dmg` file from the website or link you received.
+2. Double-click the `.dmg` file to open it.
+3. Drag the **Decode** app into your **Applications** folder.
 
-      ```npm i -g mintlify@latest```
-      And run the new upgrade command in your docs repository:
+## Step 2: Run Decode
 
-      ```mintlify upgrade```
-      You should now be using the new ```docs.json``` configuration file. Feel free to delete the ```mint.json``` file from your repository.
-    </Note>
-  </Accordion>
-</AccordionGroup>
+macOS will block the app from opening.
 
-### Deploy your changes
+1. Open **Applications** and double-click **Decode**.
+2. You’ll see a message that says:
 
-<AccordionGroup>
+   > “Decode” can’t be opened because it is from an unidentified developer.
 
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
+   This happens because the app isn’t notarized yet (Apple hasn’t scanned it), even though it’s **safely signed by the developer**.
 
-</AccordionGroup>
+## Step 3: Allow Decode to Run
 
-## Update your docs
+1. Open **System Settings** (or **System Preferences**)
+2. Go to **Privacy & Security**
+3. Scroll down to the section that says:
 
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
+   > "**Decode** was blocked from use because it is not from an identified developer"
 
-<CardGroup>
+4. Click **“Open Anyway”**
+5. A new prompt will appear — click **Open** to confirm
 
-<Card title="Add Content With MDX" icon="file" href="/essentials/markdown">
-  Add content to your docs with MDX syntax.
-</Card>
+This will launch **Decode**, and you won’t have to do this again.
 
-<Card
-  title="Add Code Blocks"
-  icon="square-code"
-  href="/essentials/code"
->
-  Add code directly to your docs with syntax highlighting.
-</Card>
+**✅ You’re Done!**
 
-<Card
-  title="Add Images"
-  icon="image"
-  href="/essentials/images"
->
-  Add images to your docs to make them more engaging.
-</Card>
+Decode is now installed and ready to use. You can launch it anytime from your Applications folder or Spotlight.
 
-<Card
-  title="Add Custom Components"
-  icon="puzzle-piece"
-  href="/essentials/reusable-snippets"
->
-  Add templates to your docs to make them more reusable.
-</Card>
+## Is it Safe?
 
-</CardGroup>
+Yes. The app is **digitally signed** with the developer’s verified Apple ID. It hasn’t been notarized yet (Apple’s malware scan), but it hasn’t been modified and macOS knows who created it.
+
+We’re working on full notarization soon to make this step unnecessary.
+
+## Troubleshooting
+
+If you still can’t open the app:
+
+- Right-click (or Control-click) the **Decode.app** file and choose **Open**
+- This can sometimes bypass the block without going through System Settings
