Added Discord server

--- a/index.mdx
+++ b/index.mdx
@@ -2,7 +2,9 @@
 title: Introduction
 ---
 
-Thanks for trying out our early alpha! To get started using Decode, read [Quick start](/quickstart).
+Thanks for trying out Decode's early alpha! Read our [Quick start](/quickstart).
+
+Join our [Discord](https://discord.com/invite/5s7V76fJ) to give us feedback and get help.
 
 <img className="block" src="/images/hero-light.png" alt="Decode screenshot" />
 {/* <img
