Added installer download and discord link

--- a/index.mdx
+++ b/index.mdx
@@ -1,10 +1,9 @@
 ---
-title: Introduction
+title: Welcome to Decode’s Early Alpha!
 ---
 
-Thanks for trying out Decode's early alpha! Read our [Quick start](/quickstart).
-
-Join our [Discord](https://discord.com/invite/5s7V76fJ) to give us feedback and get help.
+1. Read our [Quick start](/quickstart).
+2. Join our [Discord](https://discord.gg/3mRDPuS2Sn) to give us feedback and get help.
 
 <img className="block" src="/images/hero-light.png" alt="Decode screenshot" />
 {/* <img
