--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -10,7 +10,7 @@ Since this app is not yet notarized by Apple, you’ll need to follow a few quic
 
 ## Step 1: Download and Open the `.dmg`
 
-1. Download the `Decode.dmg` file from the website or link you received.
+1. Download Decode's [installer](https://download-decode.netlify.app/Decode.dmg).
 2. Double-click the `.dmg` file to open it.
 3. Drag the **Decode** app into your **Applications** folder.
 
