--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,8 @@
 ---
-title: Welcome to Decode’s Early Alpha!
+title: Documentation
 ---
+
+### Welcome to Decode’s Early Alpha!
 
 1. Read our [Quick start](/quickstart).
 2. Join our [Discord](https://discord.gg/3mRDPuS2Sn) to give us feedback and get help.
