--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -8,7 +8,7 @@ Thanks for trying **Decode** — a visual tool for turning your ideas into softw
 
 Since this app is not yet notarized by Apple, you’ll need to follow a few quick steps to allow it to run on your Mac. This process is safe and takes less than a minute.
 
-## Step 1: Download and Open the `.dmg`
+## Step 1: Download Installer
 
 1. Download Decode's [installer](https://download-decode.netlify.app/Decode.dmg).
 2. Double-click the `.dmg` file to open it.
